[package]
name = "ssb-blobs-neon"
version = "0.0.1"
authors = ["Tim Robinson <tim@timjrobinson.com> <tim@timjrobinson.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ssb_blobs_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.5.3"
